--- a/index.htm
+++ b/index.htm
@@ -3,8 +3,8 @@
     <head>
         <title>Home</title>
     </head>
-    <body> <h1>Welcome to the home page</h1>
+    <body> <h1>Welcome to the home page!</h1>
         <p>This is the home page of website.</p>
         <p>Click <a href="about.php">here</a> to go to the about page.</p>
     </body>
-</html>                                  
+</html>                                   
