lagt till bild url

--- a/index.htm
+++ b/index.htm
@@ -75,7 +75,7 @@
         <div id="restaurants" class="info">Lista över restauranger nära torget.</div>
     </ul>
     <div class="image-gallery">
-        <img src="image1.jpg" alt="Bild 1">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c6/Font%C3%A4nen_Lekande_barn%2C_Malm%C3%B6%2C_Anders_J%C3%B6nsson%2C_1914.jpg/800px-Font%C3%A4nen_Lekande_barn%2C_Malm%C3%B6%2C_Anders_J%C3%B6nsson%2C_1914.jpg" alt="Bild 1">
         <img src="image2.jpg" alt="Bild 2">
         <img src="image3.jpg" alt="Bild 3">
         <img src="image4.jpg" alt="Bild 4">
