brutit ut stilinformation till filen style.css

--- a/index.htm
+++ b/index.htm
@@ -4,53 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gustav Adolfs torg</title>
-    <style>
-        body {
-            background-color: white;
-            text-align: center;
-            font-family: Arial, sans-serif;
-            margin: 50px;
-        }
-        h1 {
-            color: black;
-        }
-        .text-list {
-            list-style-type: none;
-            padding: 0;
-            margin-top: 20px;
-        }
-        .text-list li {
-            font-size: 18px;
-            margin: 5px 0;
-        }
-        .text-list a {
-            text-decoration: none;
-            color: blue;
-            cursor: pointer;
-        }
-        .text-list a:hover {
-            text-decoration: underline;
-        }
-        .info {
-            display: none;
-            margin-top: 10px;
-            font-size: 16px;
-        }
-        .image-gallery {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            flex-wrap: wrap;
-            margin-top: 20px;
-        }
-        .image-gallery img {
-            width: 200px;
-            height: 150px;
-            object-fit: cover;
-            border: 2px solid black;
-            border-radius: 8px;
-        }
-    </style>
+    <style> </style>
+    <link rel="stylesheet" href="style.css">
     <script>
         function toggleInfo(id) {
             var element = document.getElementById(id);
