bakgrund och info

--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,7 @@
     <title>Gustav Adolfs torg</title>
     <style>
         body {
-            background-color: white;
+            background-color: rgb(255, 255, 255);
             text-align: center;
             font-family: Arial, sans-serif;
             margin: 50px;
@@ -65,10 +65,10 @@
 <body>
     <h1>Gustav Adolfs torg</h1>
     <ul class="text-list">
-        <li><a href="#" onclick="toggleInfo('history')">Platsens historia</a></li>
-        <div id="history" class="info">Här kan du läsa om platsens historia.</div>
         <li><a href="#" onclick="toggleInfo('sights')">Sevärdheter</a></li>
-        <div id="sights" class="info">Information om sevärdheter vid torget.</div>
+        <div id="sights" class="info"><b>Närhet till shopping : Gamla begravningsplatsen : Skulpturer och fontäner</b></div>
+        <li><a href="#" onclick="toggleInfo('history')">Platsens historia</a></li>
+        <div id="history" class="info"><b>Shopping Platser! </b>Torget är en utgångspunkt för shoppinggatan Södergatan, som leder genom Gamla Staden och erbjuder ett brett utbud av butiker.<br>Väster om torget ligger Gamla kyrkogården, där många framstående Malmöbor är begravda.<br>På torget finns flera konstverk, bland annat skulpturen "Lekande barn" av Anders Jönsson från 1914 och fontänen "Öresund" av Gerhard Henning från 1926.</div> 
         <li><a href="#" onclick="toggleInfo('events')">Evenemang</a></li>
         <div id="events" class="info">Här finns information om kommande evenemang.</div>
         <li><a href="#" onclick="toggleInfo('restaurants')">Restauranger i närheten</a></li>
@@ -76,8 +76,7 @@
     </ul>
     <div class="image-gallery">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c6/Font%C3%A4nen_Lekande_barn%2C_Malm%C3%B6%2C_Anders_J%C3%B6nsson%2C_1914.jpg/800px-Font%C3%A4nen_Lekande_barn%2C_Malm%C3%B6%2C_Anders_J%C3%B6nsson%2C_1914.jpg" alt="Bild 1">
-        <img src="image2.jpg" alt="Bild 2">
-        
+        <img src="" alt="Bild 2">  
         <img src="image3.jpg" alt="Bild 3">
         <img src="image4.jpg" alt="Bild 4">
     </div>
